fix: headling contrast

--- a/src/static/home/main.css
+++ b/src/static/home/main.css
@@ -157,3 +157,12 @@ submit-btn-quote
 .modal-body {
     padding: 0;
 }
+
+/** **************************************************************************************************************** **/
+/** ********                                       NAVBAR                                                   ******** **/
+/** **************************************************************************************************************** **/
+.navbar{
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .6);
+    padding: 5px 5px;
+    margin-bottom: 5px;
+}
